Closed Bug 1698949 Opened 5 years ago Closed 5 years ago

Scrollbars in chrome windows are invisible

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 + fixed

People

(Reporter: mossop, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

  1. Open the History menu
  2. Select Show all History
  3. Resize the window such that a scrollbar is needed for the history contents.
  4. Note that there is space for the scrollbar and scrolling either by click and dragging or wheel works but the scroll thumb is invisible.

Narrowed down via bisecting to https://hg.mozilla.org/mozilla-central/rev/759d4e9448b3

Flags: needinfo?(emilio)

[Tracking Requested - why for this release]:

Scrollbars are not present in top level windows like the history and bookmarks UI.

Assignee: nobody → emilio
Flags: needinfo?(emilio)

Careless of me to not have tested this more thoroughly. I guess this is hidpi
only because automation has aScale = 1.0, which is why automation didn't catch
this? That's sad :(

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4c4215cb601b Fix nsNativeThemeCocoa scrollbar drawing. r=mstange
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch

Set release status flags based on info from the regressing bug 1697240

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: