Bug 1698949 - Fix nsNativeThemeCocoa scrollbar drawing. r=mstange

Careless of me to not have tested this more thoroughly. I guess this is hidpi
only because automation has aScale = 1.0, which is why automation didn't catch
this? That's sad :(

Differential Revision: https://phabricator.services.mozilla.com/D108696